--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,87 @@
-appnope==0.1.2
-asttokens==2.0.5
-backcall==0.2.0
-certifi==2021.10.8
-debugpy==1.5.1
-decorator==5.1.1
-entrypoints==0.4
-executing==0.8.3
-ipykernel==6.9.1
-ipython==8.2.0
-jedi==0.18.1
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-matplotlib-inline==0.1.2
-nest-asyncio==1.5.5
-numpy==1.20.3
-olefile==0.46
-pandas==1.4.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-pip==21.2.4
-prompt-toolkit==3.0.20
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.11.2
-python-dateutil==2.8.2
-pytz==2022.1
-pyzmq==22.3.0
-setuptools==61.2.0
-six==1.16.0
-stack-data==0.2.0
-tornado==6.1
-traitlets==5.1.1
-wcwidth==0.2.5
-wheel==0.37.1
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+asttokens=2.0.5=pyhd8ed1ab_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+bzip2=1.0.8=h8ffe710_4
+ca-certificates=2021.10.8=h5b45459_0
+colorama=0.4.4=pyh9f0ad1d_0
+debugpy=1.6.0=py39h415ef7b_0
+decorator=5.1.1=pyhd8ed1ab_0
+entrypoints=0.4=pyhd8ed1ab_0
+executing=0.8.3=pyhd8ed1ab_0
+freetype=2.10.4=h546665d_1
+intel-openmp=2022.0.0=h57928b3_3663
+ipykernel=6.13.0=py39h832f523_0
+ipython=8.3.0=py39hcbf5309_0
+jbig=2.1=h8d14728_2003
+jedi=0.18.1=py39hcbf5309_1
+jpeg=9e=h8ffe710_1
+jupyter_client=7.3.0=pyhd8ed1ab_0
+jupyter_core=4.9.2=py39hcbf5309_0
+lcms2=2.12=h2a16943_0
+lerc=3.0=h0e60522_0
+libblas=3.9.0=14_win64_mkl
+libcblas=3.9.0=14_win64_mkl
+libdeflate=1.10=h8ffe710_0
+libffi=3.4.2=h8ffe710_5
+liblapack=3.9.0=14_win64_mkl
+libpng=1.6.37=h1d00b33_2
+libsodium=1.0.18=h8d14728_1
+libtiff=4.3.0=hc4061b1_3
+libwebp=1.2.2=h57928b3_0
+libwebp-base=1.2.2=h8ffe710_1
+libxcb=1.13=hcd874cb_1004
+libzlib=1.2.11=h8ffe710_1014
+lz4-c=1.9.3=h8ffe710_1
+m2w64-gcc-libgfortran=5.3.0=6
+m2w64-gcc-libs=5.3.0=7
+m2w64-gcc-libs-core=5.3.0=7
+m2w64-gmp=6.1.0=2
+m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
+mkl=2022.0.0=h0e2418a_796
+msys2-conda-epoch=20160418=1
+nest-asyncio=1.5.5=pyhd8ed1ab_0
+numpy=1.22.3=py39h0948cea_2
+openjpeg=2.4.0=hb211442_1
+openssl=3.0.3=h8ffe710_0
+packaging=21.3=pyhd8ed1ab_0
+pandas=1.4.2=py39h2e25243_1
+parso=0.8.3=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pillow=9.1.0=py39ha53f419_2
+pip=22.0.4=pyhd8ed1ab_0
+prompt-toolkit=3.0.29=pyha770c72_0
+psutil=5.9.0=py39hb82d6ee_1
+pthread-stubs=0.4=hcd874cb_1001
+pure_eval=0.2.2=pyhd8ed1ab_0
+pygments=2.12.0=pyhd8ed1ab_0
+pyparsing=3.0.8=pyhd8ed1ab_0
+python=3.9.12=hcf16a7b_1_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python_abi=3.9=2_cp39
+pytz=2022.1=pyhd8ed1ab_0
+pywin32=303=py39hb82d6ee_0
+pyzmq=22.3.0=py39he46f08e_2
+setuptools=62.1.0=py39hcbf5309_0
+six=1.16.0=pyh6c4a22f_0
+sqlite=3.38.5=h8ffe710_0
+stack_data=0.2.0=pyhd8ed1ab_0
+tbb=2021.5.0=h2d74725_1
+tk=8.6.12=h8ffe710_0
+tornado=6.1=py39hb82d6ee_3
+traitlets=5.1.1=pyhd8ed1ab_0
+tzdata=2022a=h191b570_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wcwidth=0.2.5=pyh9f0ad1d_2
+wheel=0.37.1=pyhd8ed1ab_0
+xorg-libxau=1.0.9=hcd874cb_0
+xorg-libxdmcp=1.1.3=hcd874cb_0
+xz=5.2.5=h62dcd97_1
+zeromq=4.3.4=h0e60522_1
+zlib=1.2.11=h8ffe710_1014
+zstd=1.5.2=h6255e5f_0
